WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205425
REGRESSION (
r251015
): Hitting return before a space deletes text after the insertion position
https://bugs.webkit.org/show_bug.cgi?id=205425
Summary
REGRESSION (r251015): Hitting return before a space deletes text after the in...
Wenson Hsieh
Reported
2019-12-18 16:58:12 PST
<
rdar://problem/57575960
>
Attachments
Patch
(4.88 KB, patch)
2019-12-18 18:29 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-12-18 18:29:24 PST
Created
attachment 386048
[details]
Patch
WebKit Commit Bot
Comment 2
2019-12-19 07:15:14 PST
Comment on
attachment 386048
[details]
Patch Clearing flags on attachment: 386048 Committed
r253750
: <
https://trac.webkit.org/changeset/253750
>
WebKit Commit Bot
Comment 3
2019-12-19 07:15:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug